--- a/root/index.html
+++ b/root/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+  <!-- Remove noindex when live -->
+  <meta name="robots" content="noindex">
   <title>Secret Siem Reap — Hidden gems, quiet routes, and late-night places worth finding</title>
   <meta name="description" content="A curated guide to Siem Reap beyond the obvious: secret temples, calm food, quiet sunrise routes, and reservation-first late nights." />
   <link rel="canonical" href="https://secretsiemreap.com/" />
