--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Secret Siem Reap — Hidden gems, secret local spots, and late-night places worth finding</title>
-  <meta name="description" content="A curated guide to Siem Reap beyond the obvious: secret temples, calm food, quiet sunrise routes, and reservation-first late nights." />
+  <title>Secret Siem Reap — Hidden gems, luxury hotels, and late-night places worth finding</title>
+  <meta name="description" content="An independent editorial guide to hidden bars, luxury hotels, quiet temples and reservation-first nights in Siem Reap, Cambodia." />
   <link rel="canonical" href="https://secretsiemreap.com/" />
-  <!-- Remove when live -->
   <meta name="robots" content="noindex" />
-  <!-- Base href fixes GitHub Pages project path vs custom domain -->
+
   <base id="site-base" href="/" />
   <script>
     (function () {
@@ -20,151 +19,176 @@
     })();
   </script>
 
-  <!-- Open Graph / Twitter -->
+  <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Secret Siem Reap" />
-  <meta property="og:title" content="Secret Siem Reap — Hidden gems, quiet routes, and late-night places worth finding" />
-  <meta property="og:description" content="A curated guide to Siem Reap beyond the obvious: secret temples, calm food, quiet sunrise routes, and reservation-first late nights." />
+  <meta property="og:title" content="Secret Siem Reap — Hidden gems, luxury hotels, and late-night places worth finding" />
+  <meta property="og:description" content="Hidden bars, quiet routes, fine dining and curated luxury stays in Siem Reap." />
   <meta property="og:url" content="https://secretsiemreap.com/" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- Use relative paths (base tag handles staging vs live) -->
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- Organization Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Secret Siem Reap",
+    "url": "https://secretsiemreap.com",
+    "logo": "https://secretsiemreap.com/resources/nav-logo.png",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "Customer Service",
+      "email": "info@secretsiemreap.com"
+    }
+  }
+  </script>
+
+  <!-- Website Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "@id": "https://secretsiemreap.com/#website",
+    "url": "https://secretsiemreap.com/",
+    "name": "Secret Siem Reap",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://secretsiemreap.com/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+
 </head>
 
 <body>
-  <a class="skip-link" href="#main">Skip to content</a>
+<a class="skip-link" href="#main">Skip to content</a>
 
-  <header class="site-header" id="top">
-    <div class="nav-inner">
-      <a class="brand" href="" aria-label="Secret Siem Reap home">
-        <img class="nav-logo" src="resources/nav-logo.png" width="44" height="44" alt="Golden Lotus" decoding="async" loading="eager" />
-      </a>
+<header class="site-header" id="top">
+  <div class="nav-inner">
+    <a class="brand" href="" aria-label="Secret Siem Reap home">
+      <img class="nav-logo" src="resources/nav-logo.png" width="44" height="44" alt="Golden Lotus" decoding="async" loading="eager" />
+    </a>
 
-      <nav class="nav" aria-label="Primary">
-        <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="nav-panel">
-          <span class="nav-toggle-bars" aria-hidden="true"></span>
-          <span class="sr-only">Menu</span>
-        </button>
+    <nav class="nav" aria-label="Primary">
+      <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="nav-panel">
+        <span class="nav-toggle-bars" aria-hidden="true"></span>
+        <span class="sr-only">Menu</span>
+      </button>
 
-        <ul class="top-nav" role="list">
-          <li class="nav-item"><a class="top-link" href="siem-reap-hidden-gems/">Hidden Gems</a></li>
-          <li class="nav-item"><a class="top-link" href="siem-reap-hidden-gems/hidden-bars/">Hidden Bars</a></li>
-          <li class="nav-item"><a class="top-link" href="siem-reap-hidden-gems/speakeasy-bars/">Speakeasies</a></li>
-          <li class="nav-item"><a class="top-link" href="about/">About</a></li>
-          <li class="nav-item"><a class="top-link" href="contact/">Contact</a></li>
-        </ul>
+      <ul class="top-nav" role="list">
 
-        <div class="nav-panel" id="nav-panel" hidden>
-          <div class="nav-panel-inner">
-            <a class="nav-link" href="siem-reap-hidden-gems/">Hidden Gems</a>
-            <a class="nav-link" href="siem-reap-hidden-gems/hidden-bars/">Hidden Bars</a>
-            <a class="nav-link" href="siem-reap-hidden-gems/speakeasy-bars/">Speakeasies</a>
-            <a class="nav-link" href="about/">About</a>
-            <a class="nav-link" href="contact/">Contact</a>
+        <li class="nav-item">
+          <a class="top-link" href="siem-reap-hidden-gems/">Hidden Gems</a>
+        </li>
+
+        <li class="nav-item has-dropdown" data-dropdown="luxury">
+          <a class="top-link" href="luxury/siem-reap-luxury-guide/">Luxury</a>
+          <div class="dropdown" aria-label="Luxury submenu">
+            <div class="dropdown-inner">
+              <a class="dd-link" href="luxury/siem-reap-luxury-guide/">Luxury Guide</a>
+              <a class="dd-link" href="luxury/siem-reap-deluxe-hotels/">Deluxe Hotels</a>
+              <a class="dd-link" href="luxury/siem-reap-fine-dining/">Fine Dining</a>
+              <a class="dd-link" href="luxury/siem-reap-luxury-spa/">High-End Spa</a>
+              <a class="dd-link" href="luxury/siem-reap-unique-experiences/">Experiences</a>
+            </div>
           </div>
+        </li>
+
+        <li class="nav-item">
+          <a class="top-link" href="foodies/">FOODIES</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="top-link" href="about/">About</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="top-link" href="contact/">Contact</a>
+        </li>
+
+      </ul>
+
+      <div class="nav-panel" id="nav-panel" hidden>
+        <div class="nav-panel-inner">
+          <a class="nav-link" href="siem-reap-hidden-gems/">Hidden Gems</a>
+
+          <a class="nav-link" href="luxury/siem-reap-luxury-guide/">Luxury Guide</a>
+          <a class="nav-link" href="luxury/siem-reap-deluxe-hotels/">Deluxe Hotels</a>
+          <a class="nav-link" href="luxury/siem-reap-fine-dining/">Fine Dining</a>
+          <a class="nav-link" href="luxury/siem-reap-luxury-spa/">High-End Spa</a>
+          <a class="nav-link" href="luxury/siem-reap-unique-experiences/">Experiences</a>
+
+          <a class="nav-link" href="foodies/">FOODIES</a>
+          <a class="nav-link" href="about/">About</a>
+          <a class="nav-link" href="contact/">Contact</a>
         </div>
-      </nav>
+      </div>
+    </nav>
+  </div>
+</header>
+
+<main id="main">
+
+  <!-- HERO SECTION REMAINS EXACTLY AS YOU PROVIDED -->
+  <!-- KEEP YOUR ENTIRE HERO + PAPER CONTENT BLOCK UNCHANGED HERE -->
+
+</main>
+
+<footer class="site-footer" role="contentinfo">
+  <div class="footer-inner">
+
+    <div class="footer-intro">
+      <p>
+        Secret Siem Reap is an independent editorial publication covering hidden bars,
+        luxury hotels and atmosphere-led travel in Siem Reap, Cambodia.
+      </p>
     </div>
-  </header>
 
-  <main id="main">
-    <section class="hero" id="hero" aria-label="Siem Reap hero">
-      <div class="hero-media" aria-hidden="true">
-        <picture class="hero-poster">
-          <source type="image/webp" srcset="resources/hero-cinematic-1920.webp">
-          <img
-            src="resources/hero-cinematic-1920.jpg"
-            width="1920"
-            height="1080"
-            alt=""
-            decoding="async"
-            fetchpriority="high"
-          />
-        </picture>
+    <nav class="footer-grid" aria-label="Footer Navigation">
+
+      <div class="footer-col">
+        <h3>Hidden Gems</h3>
+        <a href="siem-reap-hidden-gems/">Guide</a>
+        <a href="siem-reap-hidden-gems/hidden-bars/">Hidden Bars</a>
+        <a href="siem-reap-hidden-gems/speakeasy-bars/">Speakeasies</a>
       </div>
 
-      <div class="hero-overlay" aria-hidden="true"></div>
-
-      <div class="hero-brand" aria-label="Golden Lotus">
-        <div class="hero-brand-inner">
-          <img class="brand-logo" src="resources/hero-logo.png" width="240" height="240" alt="Golden Lotus" decoding="async" fetchpriority="high" />
-        </div>
+      <div class="footer-col">
+        <h3>Luxury</h3>
+        <a href="luxury/siem-reap-luxury-guide/">Luxury Guide</a>
+        <a href="luxury/siem-reap-deluxe-hotels/">Deluxe Hotels</a>
+        <a href="luxury/siem-reap-fine-dining/">Fine Dining</a>
+        <a href="luxury/siem-reap-luxury-spa/">High-End Spa</a>
+        <a href="luxury/siem-reap-unique-experiences/">Experiences</a>
       </div>
 
-      <div class="hero-timed">
-        <div class="hero-timed-inner">
-          <div class="timed-line timed-1" id="timed1" aria-live="polite">New discoveries?</div>
-          <div class="timed-line timed-2" id="timed2" aria-live="polite">In Siem Reap, they’re everywhere…</div>
-
-          <div class="timed-cta" id="timed3">
-            <div class="timed-kicker">START HERE:</div>
-            <a class="btn btn-outline" href="siem-reap-hidden-gems/" data-cta="hero_hidden_gems">EXPLORE HIDDEN GEMS</a>
-          </div>
-
-          <div class="timed-rotator hero-rotator" id="timed4" aria-live="polite">
-            <span class="word-roller">
-              <span class="word-roller__window">
-                <span class="word-roller__track" id="adjTrack"></span>
-              </span>
-            </span>
-            discoveries in
-            <span class="word-roller country-roller">
-              <span class="word-roller__window">
-                <span class="word-roller__track" id="countryTrack"></span>
-              </span>
-            </span>
-          </div>
-        </div>
+      <div class="footer-col">
+        <h3>Editorial</h3>
+        <a href="foodies/">Foodies</a>
+        <a href="about/">About</a>
+        <a href="editorial-policy/">Editorial Policy</a>
       </div>
-    </section>
 
-    <section class="paper" aria-label="Secret Siem Reap overview">
-      <div class="paper-inner">
-        <h1 class="paper-title">Secret Siem Reap: the hidden-gems guide</h1>
-        <p class="paper-lede">
-          Quiet temples, calm food, and reservation-first late nights — curated for travellers who want atmosphere, not crowds.
-          We keep a few entry details discreet on purpose.
-        </p>
-
-        <div class="paper-grid" role="list">
-          <div class="paper-card" role="listitem">
-            <h2 class="paper-h">Quiet routes &amp; temples</h2>
-            <p class="paper-p">
-              Sunrise without the crush, temples that still feel like a discovery, and timing tips that make Angkor feel calm again.
-            </p>
-          </div>
-
-          <div class="paper-card" role="listitem">
-            <h2 class="paper-h">Food with real atmosphere</h2>
-            <p class="paper-p">
-              Spots chosen for vibe and consistency — not “top 10” filler. The kind of places you end up returning to.
-            </p>
-          </div>
-
-          <div class="paper-card" role="listitem">
-            <h2 class="paper-h">Reservation-first nights</h2>
-            <p class="paper-p">
-              Courtyards, back rooms, and speakeasy energy. Some venues limit entry to protect the night — and it shows.
-            </p>
-          </div>
-        </div>
-
-        <div class="paper-note">
-          <p class="paper-p">
-            Start with the pillar guide, then branch into the late-night lists. If you want the discreet notes,
-            use the contact page and we’ll share what you need.
-          </p>
-        </div>
-
-        <div class="paper-actions">
-          <a class="btn btn-dark" href="siem-reap-hidden-gems/" data-cta="home_pillar">Open the Hidden Gems guide</a>
-          <a class="btn btn-ghost" href="contact/" data-cta="home_contact">Request discreet notes</a>
-        </div>
+      <div class="footer-col">
+        <h3>Practical</h3>
+        <a href="contact/">Contact</a>
+        <a href="privacy/">Privacy Policy</a>
+        <a href="terms/">Terms</a>
+        <a href="sitemap/">Site Map</a>
       </div>
-    </section>
-  </main>
 
-  <script src="main.js" defer></script>
+    </nav>
+
+    <div class="footer-bottom">
+      <p>© <span id="year"></span> Secret Siem Reap</p>
+    </div>
+
+  </div>
+</footer>
+
+<script src="main.js" defer></script>
 </body>
 </html>
