--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Secret Siem Reap — Hidden gems, luxury hotels, and late-night places worth finding</title>
-  <meta name="description" content="An independent editorial guide to hidden bars, luxury hotels, quiet temples and reservation-first nights in Siem Reap, Cambodia." />
-  <link rel="canonical" href="https://secretsiemreap.com/" />
-  <meta name="robots" content="noindex" />
+  <title>Secret Siem Reap | Hidden Gems & Luxury Guide to Siem Reap, Cambodia</title>
 
+  <meta name="description" content="An independent editorial guide to hidden bars, quiet temples, luxury hotels, fine dining and curated experiences in Siem Reap, Cambodia." />
+
+  <meta name="robots" content="noindex, nofollow" />
+  <!-- REMOVE robots tag when going live -->
+
+  <link rel="canonical" href="https://secretsiemreap.com/" />
+
+  <!-- Base (for GitHub staging vs custom domain) -->
   <base id="site-base" href="/" />
   <script>
     (function () {
@@ -19,17 +24,39 @@
     })();
   </script>
 
+  <!-- Performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+
+  <!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500&family=Open+Sans:wght@300;400;500&display=swap" rel="stylesheet">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="styles.css" />
+
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Secret Siem Reap" />
-  <meta property="og:title" content="Secret Siem Reap — Hidden gems, luxury hotels, and late-night places worth finding" />
-  <meta property="og:description" content="Hidden bars, quiet routes, fine dining and curated luxury stays in Siem Reap." />
+  <meta property="og:title" content="Secret Siem Reap | Hidden Gems & Luxury Guide to Siem Reap" />
+  <meta property="og:description" content="Hidden bars, luxury hotels, fine dining and curated experiences in Siem Reap, Cambodia." />
   <meta property="og:url" content="https://secretsiemreap.com/" />
+  <meta property="og:image" content="https://secretsiemreap.com/resources/og-cover.jpg" />
+  <meta property="og:locale" content="en_US" />
+
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Secret Siem Reap | Hidden Gems & Luxury Guide" />
+  <meta name="twitter:description" content="Luxury hotels, hidden bars and curated experiences in Siem Reap." />
+  <meta name="twitter:image" content="https://secretsiemreap.com/resources/og-cover.jpg" />
 
-  <link rel="stylesheet" href="styles.css" />
+  <!-- Geo Signals -->
+  <meta name="geo.region" content="KH-SR" />
+  <meta name="geo.placename" content="Siem Reap" />
+  <meta name="geo.position" content="13.3671;103.8448" />
+  <meta name="ICBM" content="13.3671, 103.8448" />
 
-  <!-- Organization Schema -->
+  <!-- Structured Data: Organization -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -37,15 +64,11 @@
     "name": "Secret Siem Reap",
     "url": "https://secretsiemreap.com",
     "logo": "https://secretsiemreap.com/resources/nav-logo.png",
-    "contactPoint": {
-      "@type": "ContactPoint",
-      "contactType": "Customer Service",
-      "email": "info@secretsiemreap.com"
-    }
+    "sameAs": []
   }
   </script>
 
-  <!-- Website Schema -->
+  <!-- Structured Data: WebSite -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -53,10 +76,24 @@
     "@id": "https://secretsiemreap.com/#website",
     "url": "https://secretsiemreap.com/",
     "name": "Secret Siem Reap",
+    "inLanguage": "en",
     "potentialAction": {
       "@type": "SearchAction",
       "target": "https://secretsiemreap.com/?s={search_term_string}",
       "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+
+  <!-- Structured Data: Local Business (Editorial Brand Positioned in Siem Reap) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "TouristInformationCenter",
+    "name": "Secret Siem Reap",
+    "areaServed": {
+      "@type": "Place",
+      "name": "Siem Reap, Cambodia"
     }
   }
   </script>
@@ -143,7 +180,7 @@
     <div class="footer-intro">
       <p>
         Secret Siem Reap is an independent editorial publication covering hidden bars,
-        luxury hotels and atmosphere-led travel in Siem Reap, Cambodia.
+        luxury hotels and atmosphere-led travel in Siem Reap, Cambodia. <a class="text-link" href="/">Discover more</a>
       </p>
     </div>
 
