--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 
 <header class="site-header" id="top">
   <div class="nav-inner">
-    <a class="brand" href="" aria-label="Secret Siem Reap home">
+   <!-- <a class="brand" href="" aria-label="Secret Siem Reap home">
       <img class="nav-logo" src="resources/nav-logo.png" width="44" height="44" alt="Golden Lotus" decoding="async" loading="eager" />
     </a>
-
+-->
     <nav class="nav" aria-label="Primary">
       <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="nav-panel">
         <span class="nav-toggle-bars" aria-hidden="true"></span>
@@ -135,7 +135,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="top-link" href="foodies/">FOODIES</a>
+          <a class="top-link" href="foodies/">Foodies</a>
         </li>
 
         <li class="nav-item">
@@ -150,7 +150,7 @@
 
       <div class="nav-panel" id="nav-panel" hidden>
         <div class="nav-panel-inner">
-          <a class="nav-link" href="siem-reap-hidden-gems/">Hidden Gems</a>
+          <a class="nav-link" href="siem-reap-hidden-gems/">> Hidden Gems</a>
 
           <a class="nav-link" href="luxury/siem-reap-luxury-guide/">Luxury Guide</a>
           <a class="nav-link" href="luxury/siem-reap-deluxe-hotels/">Deluxe Hotels</a>
@@ -158,7 +158,7 @@
           <a class="nav-link" href="luxury/siem-reap-luxury-spa/">High-End Spa</a>
           <a class="nav-link" href="luxury/siem-reap-unique-experiences/">Experiences</a>
 
-          <a class="nav-link" href="foodies/">FOODIES</a>
+          <a class="nav-link" href="foodies/">Foodies</a>
           <a class="nav-link" href="about/">About</a>
           <a class="nav-link" href="contact/">Contact</a>
         </div>
@@ -166,14 +166,107 @@
     </nav>
   </div>
 </header>
-
+<div class="page-shell">
 <main id="main">
 
-  <!-- HERO SECTION REMAINS EXACTLY AS YOU PROVIDED -->
-  <!-- KEEP YOUR ENTIRE HERO + PAPER CONTENT BLOCK UNCHANGED HERE -->
+ <section class="hero" id="hero" aria-label="Siem Reap hero">
+      <div class="hero-media" aria-hidden="true">
+        <picture class="hero-poster">
+          <source type="image/webp" srcset="resources/hero-cinematic-1920.webp">
+          <img
+            src="resources/hero-cinematic-1920.jpg"
+            width="1920"
+            height="1080"
+            alt=""
+            decoding="async"
+            fetchpriority="high"
+          />
+        </picture>
+      </div>
+
+      <div class="hero-overlay" aria-hidden="true"></div>
+
+      <!--
+       <div class="hero-brand" aria-label="Golden Lotus">
+        <div class="hero-brand-inner">
+          <img class="brand-logo" src="resources/hero-logo.png" width="240" height="240" alt="Golden Lotus" decoding="async" fetchpriority="high" />
+        </div>
+      </div>
+    -->
+      <div class="hero-timed">
+        <div class="hero-timed-inner">
+          <div class="timed-line timed-1" id="timed1" aria-live="polite">New discoveries?</div>
+          <div class="timed-line timed-2" id="timed2" aria-live="polite">In Siem Reap, they’re everywhere…</div>
+
+          <div class="timed-cta" id="timed3">
+            <div class="timed-kicker">START HERE:</div>
+            <a class="btn btn-outline" href="siem-reap-hidden-gems/" data-cta="hero_hidden_gems">EXPLORE HIDDEN GEMS</a>
+          </div>
+
+          <div class="timed-rotator hero-rotator" id="timed4" aria-live="polite">
+            <span class="word-roller">
+              <span class="word-roller__window">
+                <span class="word-roller__track" id="adjTrack"></span>
+              </span>
+            </span>
+            discoveries in
+            <span class="word-roller country-roller">
+              <span class="word-roller__window">
+                <span class="word-roller__track" id="countryTrack"></span>
+              </span>
+            </span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="paper" aria-label="Secret Siem Reap overview">
+      <div class="paper-inner">
+        <h1 class="paper-title">Header one</h1>
+        <p class="paper-lede">
+          Quiet temples, calm food, and reservation-first late nights — curated for travellers who want atmosphere, not crowds.
+          We keep a few entry details discreet on purpose.
+        </p>
+
+        <div class="paper-grid" role="list">
+          <div class="paper-card" role="listitem">
+            <h2 class="paper-h">Quiet routes &amp; temples</h2>
+            <p class="paper-p">
+              Sunrise without the crush, temples that still feel like a discovery, and timing tips that make Angkor feel calm again.
+            </p>
+          </div>
+
+          <div class="paper-card" role="listitem">
+            <h2 class="paper-h">Food with real atmosphere</h2>
+            <p class="paper-p">
+              Spots chosen for vibe and consistency — not “top 10” filler. The kind of places you end up returning to.
+            </p>
+          </div>
+
+          <div class="paper-card" role="listitem">
+            <h2 class="paper-h">Reservation-first nights</h2>
+            <p class="paper-p">
+              Courtyards, back rooms, and speakeasy energy. Some venues limit entry to protect the night — and it shows.
+            </p>
+          </div>
+        </div>
+
+        <div class="paper-note">
+          <p class="paper-p">
+            Start with the pillar guide, then branch into the late-night lists. If you want the discreet notes,
+            use the contact page and we’ll share what you need.
+          </p>
+        </div>
+
+        <div class="paper-actions">
+          <a class="btn btn-dark" href="siem-reap-hidden-gems/" data-cta="home_pillar">Open the Hidden Gems guide</a>
+          <a class="btn btn-ghost" href="contact/" data-cta="home_contact">Request discreet notes</a>
+        </div>
+      </div>
+    </section>
 
 </main>
-
+</div><!-- end page shell -->
 <footer class="site-footer" role="contentinfo">
   <div class="footer-inner">
 
@@ -198,7 +291,7 @@
         <a href="luxury/siem-reap-luxury-guide/">Luxury Guide</a>
         <a href="luxury/siem-reap-deluxe-hotels/">Deluxe Hotels</a>
         <a href="luxury/siem-reap-fine-dining/">Fine Dining</a>
-        <a href="luxury/siem-reap-luxury-spa/">High-End Spa</a>
+        <a href="luxury/siem-reap-luxury-spa/">High-End Spas</a>
         <a href="luxury/siem-reap-unique-experiences/">Experiences</a>
       </div>
 
