--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
       <!-- DESKTOP NAV -->
       <ul class="top-nav" role="list">
 
-        <li class="nav-item">
+        <li class="nav-item keep-compact">
           <a class="top-link" href="hidden-gems/">Hidden Gems</a>
         </li>
 
         <!-- GUIDE DROPDOWN -->
-        <li class="nav-item has-dropdown" data-dropdown="guide">
+        <li class="nav-item has-dropdown keep-compact" data-dropdown="guide">
           <a class="top-link" href="guide/">Siem Reap Guide</a>
           <div class="dropdown" aria-label="Siem Reap Guide submenu">
             <div class="dropdown-inner">
